--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     "address": {
       "@type": "PostalAddress",
       "addressCountry": "BR",
-      "addressLocality": "São Paulo",
-      "addressRegion": "SP"
+      "addressLocality": "Brasília",
+      "addressRegion": "DF"
     },
     "contactPoint": {
       "@type": "ContactPoint",
@@ -364,12 +364,13 @@
           <h4 class="text-white font-semibold mb-3">SWAY Brasil</h4>
           <p class="text-sm text-slate-400">Soluções de atendimento com IA vertical para empresas brasileiras.</p>
           <p class="text-sm text-slate-500 mt-2">CNPJ: 62.557.381/0001-61</p>
-          <p class="text-sm text-slate-500">Brasil • São Paulo, SP</p>
+          <p class="text-sm text-slate-500">Brasil • Brasília, DF</p>
         </div>
         <div>
           <h4 class="text-white font-semibold mb-3">Contato</h4>
           <p class="text-sm"><a href="mailto:contato@swaybrasil.com" class="hover:text-white">contato@swaybrasil.com</a></p>
           <p class="text-sm mt-2"><a href="https://api.whatsapp.com/send/?phone=556198431746" target="_blank" class="hover:text-white">+55 (61) 98431-7466</a></p>
+          <p class="text-sm mt-2"><a href="https://www.instagram.com/sway_brasil/" target="_blank" class="hover:text-white">Instagram: @sway_brasil</a></p>
         </div>
         <div>
           <h4 class="text-white font-semibold mb-3">Legal</h4>
