--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <a href="#faq" class="hover:text-primary-700">FAQ</a>
         </nav>
         <div class="hidden md:flex items-center gap-3">
-          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="cta-button px-4 py-2 rounded-lg border border-slate-300" data-event="view_demo">Ver IA em ação</a>
+          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20ver%20a%20IA%20em%20a%C3%A7%C3%A3o%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-4 py-2 rounded-lg border border-slate-300" data-event="view_demo">Ver IA em ação</a>
           <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20conversa%20com%20especialista%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700" data-event="whatsapp_click">Agendar conversa</a>
         </div>
         <button id="btnMenu" class="md:hidden p-2 rounded-lg border border-slate-300" aria-label="Abrir menu">☰</button>
@@ -130,7 +130,7 @@
         <a href="#verticais" class="hover:text-primary-700">Setores</a>
         <a href="#planos" class="hover:text-primary-700">Planos</a>
         <a href="#faq" class="hover:text-primary-700">FAQ</a>
-        <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="cta-button px-4 py-2 rounded-lg border border-slate-300" data-event="view_demo">Ver IA em ação</a>
+        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20ver%20a%20IA%20em%20a%C3%A7%C3%A3o%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-4 py-2 rounded-lg border border-slate-300" data-event="view_demo">Ver IA em ação</a>
         <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20conversa%20com%20especialista%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700" data-event="whatsapp_click">Agendar conversa</a>
       </nav>
     </div>
@@ -160,7 +160,7 @@
         </div>
 
         <div class="mt-8 flex flex-wrap justify-center items-center gap-3">
-          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="cta-button px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 font-semibold shadow-lg transition-all" data-event="view_demo" id="cta-view-demo">Ver IA em ação</a>
+          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20ver%20a%20IA%20em%20a%C3%A7%C3%A3o%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 font-semibold shadow-lg transition-all" data-event="view_demo" id="cta-view-demo">Ver IA em ação</a>
           <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20conversa%20com%20especialista%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-6 py-3 rounded-xl border-2 border-primary-600 text-primary-600 hover:bg-primary-50 font-semibold" data-event="whatsapp_click" id="cta-whatsapp-hero">Agendar conversa com especialista</a>
         </div>        
         <div class="mt-6 text-sm text-slate-500">Respostas em segundos • Atendimento 24/7 • Reduza 70% da carga da sua equipe em 7 dias</div>
